保存评语修复好了

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -415,6 +415,7 @@
                         </div>
                         <div class="mt-3">
                             <button class="btn btn-primary" id="saveDeepseekApiBtn">保存API设置</button>
+                            <button class="btn btn-outline-info ms-2" id="testDeepseekApiBtn">测试连接</button>
                         </div>
                     </div>
                 </div>
