--- a/pages/export.html
+++ b/pages/export.html
@@ -191,23 +191,22 @@
                     <h2 class="export-title">选择报告模板</h2>
                     <p class="export-desc">选择一个适合的报告模板，用于生成学生成绩综合报告单。</p>
                     
-                    <div id="templateContainer" class="row">
-                        <div class="col-12">
-                            <div class="template-card selected" data-template-id="default">
-                                <img src="../img/report-template.jpg" alt="学生综合素质发展报告单" class="template-preview">
-                                <h3 class="h5">学生综合素质发展报告单</h3>
-                                <p class="small text-muted">包含学生基本信息、各学科成绩、综合评语等内容</p>
-                            </div>
-                        </div>
+                    <div id="templateContainer" class="row d-none">
+                        <!-- 隐藏模板列表，不再显示 -->
                     </div>
                     
                     <div class="mt-3">
                         <input type="file" id="templateUpload" class="d-none" accept=".docx">
-                        <button class="btn btn-outline-primary w-100" id="uploadTemplateBtn">
+                        <button class="btn btn-primary w-100" id="uploadTemplateBtn">
                             <i class='bx bx-upload'></i> 上传自定义模板
                         </button>
-                        <div id="templateInfo" class="mt-2 d-none">
-                            <small class="text-success">已选择模板: <span id="templateName">未选择</span></small>
+                        <div id="templateInfo" class="mt-2">
+                            <small class="text-muted">上传Word模板文件(.docx)，系统将使用该模板生成报告</small>
+                            <div id="uploadedTemplate" class="mt-2 d-none">
+                                <div class="alert alert-success py-2">
+                                    <i class='bx bx-check-circle me-2'></i>已选择模板: <span id="templateName">未选择</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
