更新了导出评语的功能，但不够完善

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -241,7 +241,10 @@
                                     <div class="col-md-6">
                                         <div class="mb-3">
                                             <label for="className" class="form-label">班级名称</label>
-                                            <input type="text" class="form-control" id="className" value="三年二班">
+                                            <select class="form-select" id="className">
+                                                <option value="">加载中...</option>
+                                            </select>
+                                            <small class="form-text text-muted">从数据库已导入班级中选择</small>
                                         </div>
                                         <div class="mb-3">
                                             <label for="schoolName" class="form-label">学校名称</label>
