--- a/pages/students.html
+++ b/pages/students.html
@@ -494,7 +494,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">确认删除</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn" onclick="deleteStudent(document.getElementById('deleteStudentId').value)">确认删除</button>
                 </div>
             </div>
         </div>
